# woofenstein_3d

./: .gitignore  CMakeLists.txt  README.md  compile.sh  drawContext.h  errors.h  initSDL.cpp  initSDL.h  main.cpp  map.txt  miniMap.h  render.cpp  render.h  things.h  tileMap.h
assets/items/: credentials
assets/maps/test_map/: ceil.txt  coll.txt  credentials  walls.txt
src/: CMakeLists.txt  drawContext.h  errors.h  guard.h  initSDL.cpp  linal.h  main.cpp  miniMap.h  pi.h  pixel.h  render.cpp  render.h  scene.h  things.h  tileMap.h  timer.h
